@@ -7,9 +7,10 @@
 /**
  *	32-bit kernel entrypoint. Only used by the boot CPU(BP).
  *
- *	Remember, startup_32 initialize page table and idt structures
- *	which only have exact one copy in memory respectively via boot CPU.
- *	However paging enable and lgdt and lidt must be done on each CPU.
+ *	Remember, startup_32 initialize page directory, page table and
+ *	interrupt descriptor table(idt), which only have exact one copy
+ *	in memory respectively via boot CPU. Caveat: paging enable and
+ *	lgdt and lidt must be done on each CPU.
  *
  *	Also, on entry, %esi points to the boot_params struct as a pointer.
  **/
@@ -31,43 +32,42 @@ ENTRY(startup_32)
 	rep ; stosl
 
 /*
- * Initialize early page directory and page tables.
- * A page_directory and several page_tables(the number of
- * page tables depend on Sandix's kernel image size).
+ * Initialize early_page_directory and early_page_table.
+ * For now, only one page_table is present, which means
+ * kernel image is confined beyond 4 MB.
+ * Fix this later with ld script variable.
  */
  	movl early_page_dir, %eax
 	movl early_page_table+7, (%eax)		#PRESENT R/W U/S
 	
-	movl early_page_dir, %cr3
-
-/*
- * Setup idt pointing to ignore_int, interrupt gates.
- */
-	movl $idt_table,%edi
-	movl $early_idt_handlers,%eax
-	movl $NUM_EXCEPTION_VECTORS,%ecx
+	movl early_page_table, %edi
+	movl $7, %eax		#PRESENT R/W U/S
+	movl $1024, %ecx
 1:
-	movl %eax,(%edi)
-	movl %eax,4(%edi)
-	/* interrupt gate, dpl=0, present */
-	movl $(0x8E000000 + __KERNEL_CS),2(%edi)
-	addl $9,%eax
-	addl $8,%edi
+	stosl
+	addl 0x1000, %eax
 	loop 1b
 
-	movl $256 - NUM_EXCEPTION_VECTORS,%ecx
-	movl $ignore_int,%edx
-	movl $(__KERNEL_CS << 16),%eax
-	movw %dx,%ax		/* selector = 0x0010 = cs */
-	movw $0x8E00,%dx	/* interrupt gate - dpl=0, present */
-2:
-	movl %eax,(%edi)
-	movl %edx,4(%edi)
-	addl $8,%edi
-	loop 2b
+/*
+ * Setup idt entries. We don't load idt here - that
+ * need to be done on each cpu. Interrupts are enabled
+ * elsewhere, when we sure everything is ok!!
+ */
+	movl $idt_table, %edi
+	movl $ignore_int, %eax
+	movl $idt_entries, %ecx
+1:
+	movl %eax, (%edi)
+	movl %eax, 4(%edi)
+	/* interrupt gate, dpl=0, present */
+	movl $(0x8E000000 + __KERNEL_CS), 2(%edi)
+	addl $8, %edi
+	loop 1b
 	
+/*
+ * Now go to default_entry prepared for all cpus!
+ */
 	jmp default_entry
-
 
 /*
  * Non-boot CPU(AP) entry point.
@@ -89,17 +89,17 @@ ENDPROC(ignore_int)
 
 	.data
 
-ENTRY(idt_descr)
+ENTRY(lidt_descr)
 	.word IDT_ENTRIES*8-1
 	.long idt_desc
 	
-ENTRY(gdt_descr)
+ENTRY(lgdt_descr)
 	.word GDT_ENTRIES*8-1
 	.long gdt_desc
 
 
 	.align 4096
-ENTRY(early_page_dir):
+ENTRY(early_page_dir)
 	.fill 1024,4,0
-ENTRY(early_page_table):
+ENTRY(early_page_table)
 	.fill 1024,4,0
